internal/xds/translator/testdata/out/xds-ir/compression.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor.brotli:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            responseDirectionConfig: {}
        envoy.filters.http.compressor.gzip:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            responseDirectionConfig: {}
        envoy.filters.http.compressor.zstd:
          '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
          overrides:
            responseDirectionConfig:
              removeAcceptEncodingHeader: true
